--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="dph_line_cut">#f6f6f6</color>
+    <color name="black">#373737</color>
+    <color name="white">#ffffff</color>
+    <color name="gray_background">#999999</color>
+
 </resources>
