--- a/app/src/main/res/layout/activity_settting.xml
+++ b/app/src/main/res/layout/activity_settting.xml
@@ -38,7 +38,7 @@
                 android:layout_height="match_parent"
                 android:drawableRight="@drawable/triange_down"
                 android:gravity="center_vertical"
-                android:text="时间1" />
+                android:text="时间1 ▼" />
 
             <TextView
                 android:layout_width="70dp"
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text="时间2:" />
+                android:text="时间2 ▼" />
         </LinearLayout>
 
 
@@ -76,7 +76,7 @@
                 android:text="朋友1:" />
 
             <EditText
-                android:id="@+id/et_mobile"
+                android:id="@+id/friends1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -96,7 +96,7 @@
                 android:text="朋友2:" />
 
             <EditText
-                android:id="@+id/et_cost"
+                android:id="@+id/friends2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
@@ -113,7 +113,7 @@
                 android:text="朋友3:" />
 
             <EditText
-                android:id="@+id/et_discount"
+                android:id="@+id/friends3"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
