实现全部监听,并且保存到sp当中,下一步开始进入测试

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,12 @@
             android:gravity="center"
             android:text="时间1:" />
 
+        <TimePicker
+            android:id="@+id/id_add_timePicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:timePickerMode="spinner"/>
+
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -131,6 +137,16 @@
         android:layout_alignBaseline="@+id/sw_praise"
         android:layout_alignBottom="@+id/sw_praise"
         android:layout_toEndOf="@+id/sw_praise" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="63dp"
+        android:ems="10"
+        android:inputType="time" />
 
 
 </RelativeLayout>
