--- a/app/src/main/res/layout/activity_settting.xml
+++ b/app/src/main/res/layout/activity_settting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -55,7 +56,16 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:text="时间② ▼" />
+
+            <ImageView
+                android:id="@+id/imageView_del"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_delete"
+                />
         </LinearLayout>
+
+
 
 
         <TextView
